# FitFinder

./: .gitignore  404.html  CNAME  README.md  index.html  merge_all.ps1  package-lock.json  package.json
assets/: index-B-tqzoNd.js  index-B4uR8IRw.js  index-BQ5OMNg6.js  index-BTnRnUbS.js  index-BYDdjmj6.css  index-C-S1ByUM.js  index-C4ttTqiX.js  index-CHZJikcw.js  index-CIbALwYB.css  index-CLy0Qz10.js  index-CN2T4-Ms.css  index-CPSi5vFB.js  index-CPdujRte.css  index-CQC3Obzd.js  index-CeU29g0Z.js  index-CeZ5xyF8.js  index-CsDlbwui.js  index-Ctd08Sd3.js  index-CwodhGeR.js  index-Cy-cmuyO.css  index-CzRHsgjR.css  index-D1vYloy3.js  index-D3As9KC3.js  index-DD2E24Kt.css  index-DF6YpydJ.css  index-DMvM_bKe.js  index-DToitH9_.js  index-DW_HzFdw.js  index-DX6Dd-_x.js  index-DccAQVhd.css  index-Dn9Kjbqf.css  index-G7YWSLEv.css  index-OqFo2wXL.css  index-VvlAgVey.js  index-kLk78y71.js  index-lKqOb9g6.js  index-xEcb1oVi.js
data/: README.md  test.html  test.json
docs/: README.md  emailjs-html-template.html  emailjs-template.json
frontend/: README.md  package-lock.json  package.json
models/: README.md  requirements.txt
models/fitfinder-ai-service/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  test_clip_api.py
models/fitfinder-ai-service/app/: db.py  main.py  tasks.py
models/fitfinder-ai-service/app/api/: connection.py  faiss.py  jobs.py  test.py
models/fitfinder-ai-service/app/services/: clip_service.py  cloudinary_service.py  faiss_service.py  sam_service.py  search_pipeline.py  simulator.py
models/fitfinder-ai-service/app/workers/: segment_worker.py
models/fitfinder-ai-service/app/workers/clip_worker/: clip_model.py  faiss_manager.py  worker.py
save_scraped_items/: db.py  (+2 more)
(+465 files in other folders)
