[tool.poetry]
name = "fitfinder-ai-service"
version = "0.1.0"
description = ""
authors = ["Mohamed Abdel-Moneim <mabdelmoneim737@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
fastapi = "^0.119.1"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
python-dotenv = "^1.1.1"
pydantic = "^2.12.3"
torch = "^2.9.0"
torchvision = "^0.24.0"
transformers = "^4.57.1"
python-multipart = "^0.0.20"
pillow = "*"
psycopg2-binary = "^2.9.11"
huggingface-hub = "<1.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.9.0"
isort = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
